# ds18b20

./: .gitignore  Cargo.toml  README.adoc
doc/: 1-Wire Communication Through Software _ Analog Devices.mhtml
src/: command.rs  commands.rs  configuration.rs  crc8.rs  error.rs  lib.rs  rom.rs  scratchpad.rs  temp.rs  transactions.rs
src/command/: memory.rs  mod.rs  rom.rs
src/commands/: memory.rs  mod.rs  rom.rs
